<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomeActivity"
    android:gravity="center"
    android:animateLayoutChanges="true"
    android:orientation="vertical"
    android:id="@+id/welcome_main"
    android:background="@drawable/welcome_grad">


    <ImageView
        android:id="@+id/pika_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:src="@drawable/pikka"
        android:contentDescription="@string/pika_logo"
        android:visibility="gone"/>

    <ScrollView
        android:id="@+id/welcome_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/headerStyle"
                android:text="@string/pika_welcome_text"
                android:textColor="@color/colorWhite"
                android:textAlignment="center"
                android:layout_margin="32dp"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/bt_signUp"
                style="@style/buttonStyle2"
                android:background="@drawable/button_background_white"
                android:text="@string/sign_up"
                android:textColor="#d580ff"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/sign_up_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/sign_up"
                android:background="@drawable/button_background_white"
                android:textColor="@color/colorBlack"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:paddingLeft="64dp"
                android:paddingRight="64dp"
                android:clickable="true"
                android:focusable="true"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/login_button"
                android:layout_width="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:textColor="@color/colorWhite"
                android:textStyle="bold"
                android:text="@string/login_instead"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"/>

        </LinearLayout>


    </ScrollView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:textSize="12sp"
        android:text="@string/playbook_copyright"
        android:textColor="@color/colorWhite" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:text="@string/all_rights_reserved"
        android:textColor="@color/colorWhite"/>

</LinearLayout>