<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    android:padding="6dp">

    <ImageView
        android:id="@+id/profile_infoIcon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/round_background"
        android:padding="8dp"
        android:tint="@color/colorWhite"
        android:contentDescription="@string/profile_info_icon"/>

    <TextView
        android:id="@+id/profile_infoTitle"
        android:layout_width="wrap_content"
        android:layout_marginStart="4dp"
        android:textSize="15sp"
        android:textColor="@color/colorBlack"
        android:text="@string/title"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/profile_infoIcon"/>

    <TextView
        android:id="@+id/profile_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/profile_infoIcon"
        android:layout_below="@id/profile_infoTitle"
        android:layout_marginStart="4dp"
        android:textSize="12sp"
        android:text="@string/info"/>


</RelativeLayout>